Bug 1837268, update inline spellchecker when text data is modified, r=masayuki

Using the test for bug 1602526 as the basis for the new test but tweaking it by
adding the event listener used in the first testcase of the bug.

Differential Revision: https://phabricator.services.mozilla.com/D184987